[package]
name = "pipe2color"
version = "0.1.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#colored = "2.0"
crossterm = "0.25.0"
getch = "0.3.1"
chrono = "0.4"
reqwest = { version = "0.11", features = ["blocking"] }
